system/storage/longhorn-extra/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: storage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.<secret:kv/data/domains~domain>`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls: {}
